# scnn_trt_backend

./: .gitignore  CMakeLists.txt  ReadMe.md  package.xml
cmake/: Config.cmake  ModelGeneration.cmake  TestingSetup.cmake
include/scnn_trt_backend/: config.hpp  decode_and_colorize_kernel.hpp  exception.hpp  lane_utils.hpp  normalize_kernel.hpp  scnn_trt_backend.hpp
script/: export_scnn_to_onnx.py  scnn_lane_detection.py
src/: decode_and_colorize_kernel.cu  lane_utils.cpp  normalize_kernel.cu  scnn_trt_backend.cpp
test/: test_scnn_trt_backend.cpp
